@@ -251,6 +251,8 @@ block|{
 name|Query
 name|q
 init|=
+name|super
+operator|.
 name|getFieldQuery
 argument_list|(
 name|fields
@@ -312,46 +314,13 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-if|if
-condition|(
-name|q
-operator|instanceof
-name|PhraseQuery
-condition|)
-block|{
-operator|(
-operator|(
-name|PhraseQuery
-operator|)
-name|q
-operator|)
-operator|.
-name|setSlop
+name|applySlop
 argument_list|(
+name|q
+argument_list|,
 name|slop
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|q
-operator|instanceof
-name|MultiPhraseQuery
-condition|)
-block|{
-operator|(
-operator|(
-name|MultiPhraseQuery
-operator|)
-name|q
-operator|)
-operator|.
-name|setSlop
-argument_list|(
-name|slop
-argument_list|)
-expr_stmt|;
-block|}
 name|clauses
 operator|.
 name|add
@@ -393,7 +362,9 @@ literal|true
 argument_list|)
 return|;
 block|}
-return|return
+name|Query
+name|q
+init|=
 name|super
 operator|.
 name|getFieldQuery
@@ -402,7 +373,71 @@ name|field
 argument_list|,
 name|queryText
 argument_list|)
+decl_stmt|;
+name|applySlop
+argument_list|(
+name|q
+argument_list|,
+name|slop
+argument_list|)
+expr_stmt|;
+return|return
+name|q
 return|;
+block|}
+DECL|method|applySlop
+specifier|private
+name|void
+name|applySlop
+parameter_list|(
+name|Query
+name|q
+parameter_list|,
+name|int
+name|slop
+parameter_list|)
+block|{
+if|if
+condition|(
+name|q
+operator|instanceof
+name|PhraseQuery
+condition|)
+block|{
+operator|(
+operator|(
+name|PhraseQuery
+operator|)
+name|q
+operator|)
+operator|.
+name|setSlop
+argument_list|(
+name|slop
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|q
+operator|instanceof
+name|MultiPhraseQuery
+condition|)
+block|{
+operator|(
+operator|(
+name|MultiPhraseQuery
+operator|)
+name|q
+operator|)
+operator|.
+name|setSlop
+argument_list|(
+name|slop
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|getFieldQuery
 specifier|protected
